--- a/website/home.html
+++ b/website/home.html
@@ -3,10 +3,10 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <meta name="author" content="Liang Sun : i@liangsun.org">
-        <meta name="keywords" content="猪房纸">
-        <meta name="description" content="猪房纸">
+        <meta name="keywords" content="猪房纸,房屋租赁搜索引擎,租房子">
+        <meta name="description" content="猪房纸,房屋租赁搜索引擎">
         <link rel="stylesheet" type="text/css" href="static/a.css">
-        <title>猪房纸 - 房屋搜索引擎</title>
+        <title>租房子？就上猪房纸</title>
     </head>
     <body>
         <div id="top">
@@ -16,9 +16,9 @@
                 <img src="static/logo.png" />
             </div>
             <div id="form">
-                <form>
-                    <input type="text" name="search" />
-                    <input type="submit" />
+                <form action="search" method="get">
+                    <input type="text" name="query" id="query" />
+                    <input value="搜索" type="submit" id="ok" />
                 </form>
             </div>
         </div>
