Add default to the input box.

--- a/web/home.html
+++ b/web/home.html
@@ -24,5 +24,8 @@
         </div>
         <div id="bottom">
         </div>
+        <script language="JavaScript" type="text/javascript">
+            document.forms[0].query.focus();
+        </script>
     </body>
 </html>
