Fix html template.

--- a/web/search.html
+++ b/web/search.html
@@ -47,7 +47,7 @@
                     {% else %}
                     <li>
                     <div class="title">
-                        没有搜索到相关结果。（猪房纸目前只支持北京地区的租房信息，请过几天再试。）
+                        没有搜索到相关结果。（猪房纸目前支持中国大部分城市的租房信息，请过几天再试。）
                     </div>
                     </li>
                     {% end %}
