Change the chinese name and logo.

--- a/web/home.html
+++ b/web/home.html
@@ -3,17 +3,17 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <meta name="author" content="Liang Sun : i@liangsun.org">
-        <meta name="keywords" content="猪房纸,房屋租赁搜索引擎,租房子">
-        <meta name="description" content="猪房纸,房屋租赁搜索引擎">
+        <meta name="keywords" content="竹方知,房屋租赁搜索引擎,租房子">
+        <meta name="description" content="竹方知,房屋租赁搜索引擎">
         <link rel="stylesheet" type="text/css" href="static/a.css">
-        <title>猪房纸 - 房屋租赁搜索引擎</title>
+        <title>竹方知 - 房屋租赁搜索引擎</title>
     </head>
     <body>
         <div id="top">
         </div>
         <div id="main">
             <div id="logo">
-                <img src="static/logo.png" />
+                <img src="static/logo.png" alt="租房子？就上“竹方知”" />
             </div>
             <div id="form">
                 <form action="search" method="get">
