--- a/web/search.html
+++ b/web/search.html
@@ -3,10 +3,10 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <meta name="author" content="Liang Sun : i@liangsun.org">
-        <meta name="keywords" content="猪房纸,房屋租赁搜索引擎,租房子">
-        <meta name="description" content="猪房纸,房屋租赁搜索引擎">
+        <meta name="keywords" content="竹方知,房屋租赁搜索引擎,租房子">
+        <meta name="description" content="竹方知,房屋租赁搜索引擎">
         <link rel="stylesheet" type="text/css" href="static/b.css">
-        <title>猪房纸 - 房屋租赁搜索引擎</title>
+        <title>竹方知 - 房屋租赁搜索引擎</title>
     </head>
     <body>
         <div id="top">
