Add a link to the logo.

--- a/web/search.html
+++ b/web/search.html
@@ -14,7 +14,9 @@
         <div id="main">
             <div id="bar">
                 <div id="logo">
-                    <img src="static/icon.png" />
+                    <a href="http://zhufangzhi.com">
+                        <img src="static/icon.png" />
+                    </a>
                 </div>
                 <form action="search" method="get">
                     <div class="row">
