Modified the logo.

--- a/web/home.html
+++ b/web/home.html
@@ -18,10 +18,11 @@
             <div id="form">
                 <form action="search" method="get">
                     <div class="row">
-                        <label class="label" for="query">地点：</label>
+                        <label class="label" for="query">我想在</label>
                         <input type="text" name="query" id="query" />
+                        <label class="label">附近租房子</label>
                     </div>
-                    <div class="row">
+                    <div class="row" id="adv">
                         <label class="label" for="price">不高于</label>
                         <input type="text" name="price" id="price" />
                         <label class="label" >元/月（可不填）</label>
