--- a/web/search.html
+++ b/web/search.html
@@ -55,7 +55,7 @@
                     {% else %}
                     <li>
                     <div class="title">
-                        没有搜索到相关结果。（猪房纸目前支持中国大部分城市的租房信息，请过几天再试。）
+                        没有搜索到相关结果。（竹方知目前支持中国大部分城市的租房信息，请过几天再试。）
                     </div>
                     </li>
                     {% end %}
