Add google analytics and top bar.

--- a/web/search.html
+++ b/web/search.html
@@ -7,9 +7,35 @@
         <meta name="description" content="竹方知,房屋租赁搜索引擎">
         <link rel="stylesheet" type="text/css" href="static/b.css">
         <title>竹方知 - 房屋租赁搜索引擎</title>
-    </head>
+        <script type="text/javascript">
+
+            var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', 'UA-35189809-1']);
+            _gaq.push(['_trackPageview']);
+
+            (function() {
+             var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+             })();
+
+         </script>
+     </head>
     <body>
         <div id="top">
+            <ul>
+                <li class="left">
+                <a href="https://github.com/liangsun/ZhuFangZhi" target="_blank">View Source Code</a>
+                </li>
+                <li class="left">
+                <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank">License</a>
+                </li>
+                <li class="left">
+                <a href="http://liangsun.org/about" target="_blank">About</a>
+                </li>
+                <li class="clear">
+                </li>
+            </ul>
         </div>
         <div id="main">
             <div id="bar">
